--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,11 @@
       <scope>compile</scope>
     </dependency>
     <dependency>
+      <groupId>com.google.api-client</groupId>
+      <artifactId>google-api-client</artifactId>
+      <version>1.32.1</version>
+    </dependency>
+    <dependency>
       <groupId>io.micronaut.views</groupId>
       <artifactId>micronaut-views-thymeleaf</artifactId>
     </dependency>
